<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="nosensor"
    android:configChanges="keyboardHidden|orientation"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dip"
    android:focusable="true"
    android:focusableInTouchMode="true"   
    android:layout_gravity="center_vertical"
    tools:context="cgnet.swara.activity.MainActivity" >

	<!-- To display the cash-in option -->
	<!--<RelativeLayout-->
		<!--android:layout_width="wrap_content"-->
		<!--android:layout_height="wrap_content"-->
		<!--android:layout_gravity="end">-->

		<!--<TextView-->
			<!--android:id="@+id/amount_to_cash_in_msg"-->
			<!--android:layout_width="wrap_content"-->
			<!--android:layout_height="wrap_content"-->
			<!--android:layout_centerVertical="true" />-->

		<!--<ImageView-->
			<!--android:id="@+id/cash_in"-->
			<!--android:layout_width="50dp"-->
			<!--android:layout_height="50dp"-->
			<!--android:layout_toRightOf="@id/amount_to_cash_in_msg"-->
			<!--android:src="@drawable/rupee_icon" />-->
	<!--</RelativeLayout>-->


	<ImageView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="0dip"
		android:layout_margin="5dip"
        android:layout_weight="0.82"
        android:adjustViewBounds="true" 
        android:scaleType="fitCenter" 
        android:src="@drawable/background_test" />
     
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:orientation="vertical">

		<Button
			android:id="@+id/one"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dip"
			android:layout_weight="1"
			android:background="@drawable/button_red"
			android:text="@string/record"
			android:textSize="25sp" />
	    
	  	<Button
	        android:id="@+id/photo"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="22sp"
	        android:layout_margin="5dip"
	        android:background="@drawable/button_red"
	        android:text="@string/include_image" />   
	    
	    <Button
	        android:id="@+id/two"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_weight="1"
	        android:background="@drawable/button_red"
	        android:text="@string/listen"
	        android:textSize="25sp" />

		<Button
			android:id="@+id/three"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dip"
			android:layout_weight="1"
			android:background="@drawable/button_red"
			android:text="@string/share_app_text"
			android:textSize="25sp" />


    </LinearLayout>
    <LinearLayout
		android:layout_marginTop="30dip"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:descendantFocusability="beforeDescendants"
    	android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:layout_weight="0.29"
	        android:text="@string/your_number_and_operator"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <LinearLayout
		android:layout_marginTop="5dip"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:descendantFocusability="beforeDescendants" 
    	android:orientation="horizontal" >
 
    <TextView
        android:id="@+id/nine_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="+91"
        android:gravity="top"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/phone"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="8"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    android:inputType="number"
	    android:maxLength="10" >

	    <requestFocus />
	</EditText>

		<Button
			android:id="@+id/selectOperator"
            style="?android:attr/buttonStyleSmall"
			android:layout_marginLeft="2dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
            android:background="@drawable/button_red"
			android:text="@string/carrier_prompt_title_hindi"/>
    
    
    </LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/sponsorship"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="0.11"
			android:gravity="center"
			android:text="@string/sponsor_message"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<ImageView
			android:id="@+id/sponsorlogo"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_weight="0.11"
			android:adjustViewBounds="true"
			android:scaleType="fitCenter"
			android:src="@drawable/tata_trust" />

	</LinearLayout>




   
</LinearLayout>